--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,7 +14,7 @@ html {
 
 .header {
   width: 100%;
-  height: 180px;
+  height: 140px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -38,10 +38,61 @@ html {
     text-decoration: none;
   }
 }
-.hello__slider{
+.hello{
+  display: block;
+  position: relative;
+  z-index: 99;
+&__slider{
   width:100%;
-  overflow: hidden;
   max-height: 650px;
+  overflow: hidden;
+  z-index: 99;
+}
+&__mask{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: rgb(20,20,20);
+background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.7315301120448179) 70%);
+}
+&__content{
+  position: absolute;
+  top: 4rem;
+  left: 6rem;
+  width: 30%;
+  
+  color: white;
+  z-index: 100;
+  &-heading{
+    margin-bottom: 1rem;
+    font-size: 4rem;
+    
+  }
+  &-text{
+    font-weight: lighter;
+    letter-spacing: 2px;
+  }
+  &-button{
+    width: 8rem;
+    margin-top: 2rem;
+    height: 3rem;
+    border: 1px solid white;
+    border-radius: 8px;
+    transition: all .2s linear;
+    &:hover{
+      background-color: transparent;
+      color: white;
+      cursor: pointer;
+      transition: all .1s linear;
+    }
+
+  }
+
+}
+
 }
 .footer {
   width: 100%;
@@ -70,6 +121,7 @@ html {
     font-family: "Satisfy";
     font-size: 1.5rem;
     font-weight: bold;
+    
   }
   &__socials {
     flex-basis: 300px;
