--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,400&family=Satisfy&display=swap");
+
+@mixin button{
+  
+    margin-top: 2rem;
+   
+    
+    border: 1px solid white;
+    border-radius: 8px;
+    transition: all .2s linear;
+    &:hover{
+      background-color: transparent;
+      color: white;
+      cursor: pointer;
+      transition: all .1s linear;
+    }
+}
+
+
 html {
   font-size: 16px;
   box-sizing: border-box;
@@ -83,20 +102,12 @@ background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.731530
     letter-spacing: 2px;
   }
   &-button{
+    @include button;
     display: inline-block;
     width: 8rem;
-    margin-top: 2rem;
+  height: 3rem;
+    
     margin-right: 1rem;
-    height: 3rem;
-    border: 1px solid white;
-    border-radius: 8px;
-    transition: all .2s linear;
-    &:hover{
-      background-color: transparent;
-      color: white;
-      cursor: pointer;
-      transition: all .1s linear;
-    }
 
   }
 
@@ -108,15 +119,19 @@ background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.731530
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  height: 500px;
+  padding-top: 6rem;
+  padding-bottom: 3rem;
+  
   background-color: rgb(31, 30, 30);
   &__item{
+    flex-basis: 300px;
     margin: 0.5rem;
+    padding: 1rem;
     background-color: rgb(236, 230, 230);
     border-radius: 8px;
     box-shadow: 8px 8px 8px 8px black;
-    flex-basis: 300px;
-    padding: 1rem;
+    
+    
    
     
   }
@@ -140,12 +155,81 @@ background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.731530
   }
   
 }
+.about{
+  background-color: #141414;
+  height: 500px;
+  width: 100%;
+}
+.form{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  max-width: 450px;
+  margin: 0 auto;
+  color: white;
+  &__container{
+    background-color:rgb(31, 30, 30);
+  }
+  &__wrapper{
+    width: 70%;
+    margin: 0 auto;
+    padding-bottom: 3rem;
+   
+  }
+  &__icon{
+    height: 6rem;
+    margin-top: 2rem;
+  }
+  &__legend{
+    margin-bottom: 3rem;
+font-size: 2rem;
+font-weight: lighter;
+align-self: center;
+
+  }
+  &__label{
+    font-weight: lighter;
+    margin-bottom: 0.4rem;
+    
+  }
+  &__input{
+    margin-bottom: 1rem;
+    height: 2.5rem;
+    background: none;
+    border: 1px solid #6c63ffff;
+    color: white;
+    outline: #6c63ffff;
+    border-radius: 4px;
+    padding: 4px;
+    &:focus{
+      border: 1px solid #6c63ffff;
+      box-shadow: inset 0 0 3px #6c63ffff, 0 0 3px #6c63ffff;
+    }
+  }
+  & option{
+    color: white;
+    background-color:rgb(31, 30, 30);
+  }
+  &__button{
+    
+    @include button;
+    width: 16rem;
+    height: 3rem;
+    align-self: center;
+    
+  }
+
+  
+}
 .footer {
   width: 100%;
   height: 400px;
+  padding-top: 1.5rem;
   background-color: #141414;
   color: #e5e5e5;
-  padding-top: 1.5rem;
+  
 
   &__container {
     display: flex;
