--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,28 +2,30 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,400&family=Satisfy&display=swap");
 
-@mixin button{
-  
-    margin-top: 2rem;
-   
-    
-    border: 1px solid white;
-    border-radius: 8px;
-    transition: all .2s linear;
-    &:hover{
-      background-color: transparent;
-      color: white;
-      cursor: pointer;
-      transition: all .1s linear;
-    }
-}
+@mixin button {
+  margin-top: 2rem;
 
+  border: 1px solid white;
+  border-radius: 8px;
+  transition: all 0.2s linear;
+  &:hover {
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    transition: all 0.1s linear;
+  }
+}
 
 html {
   font-size: 16px;
   box-sizing: border-box;
   font-family: "Roboto";
-  background-color:rgb(31, 30, 30);
+  background-color: rgb(31, 30, 30);
+ 
+}
+main{
+  background-color: rgb(31, 30, 30);
+
 }
 
 *,
@@ -58,110 +60,145 @@ html {
     text-decoration: none;
   }
 }
-.hello{
+.hello {
   display: block;
   position: relative;
   z-index: 99;
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%,0 95%);
   
-  
-&__slider{
-  width:100%;
-  max-height: 650px;
-  overflow: hidden;
- 
-  z-index: 99;
-  
-}
-&__mask{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background: rgb(20,20,20);
-background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.7315301120448179) 70%);
-}
-&__content{
-  position: absolute;
-  top: 4rem;
-  left: 6rem;
-  width: 30%;
-  min-width: 300px;
-  
-  color: white;
-  z-index: 100;
-  &-heading{
-    margin-bottom: 1rem;
-    font-size: 4rem;
-    
+  &__slider {
+    width: 100%;
+    max-height: 650px;
+    overflow: hidden;
+    z-index: 99;
   }
-  &-text{
-    font-weight: lighter;
-    letter-spacing: 2px;
+  &__mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background: rgb(20, 20, 20);
+    background: linear-gradient(
+      270deg,
+      rgba(20, 20, 20, 0) 40%,
+      rgba(20, 20, 20, 0.7315301120448179) 70%
+    );
   }
-  &-button{
-    @include button;
-    display: inline-block;
-    width: 8rem;
-  height: 3rem;
-    
-    margin-right: 1rem;
+  &__content {
+    position: absolute;
+    top: 4rem;
+    left: 6rem;
+    width: 30%;
+    min-width: 300px;
 
+    color: white;
+    z-index: 100;
+    &-heading {
+      margin-bottom: 1rem;
+      font-size: 4rem;
+    }
+    &-text {
+      font-weight: lighter;
+      letter-spacing: 2px;
+    }
+    &-button {
+      @include button;
+      display: inline-block;
+      width: 8rem;
+      height: 3rem;
+
+      margin-right: 1rem;
+    }
   }
-
 }
-
-}
-.offer{
+.offer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   padding-top: 6rem;
   padding-bottom: 3rem;
-  
-  background-color: rgb(31, 30, 30);
-  &__item{
+  color: black;
+
+  background-color: #141414;
+  &__item {
     flex-basis: 300px;
     margin: 0.5rem;
     padding: 1rem;
     background-color: rgb(236, 230, 230);
     border-radius: 8px;
     box-shadow: 8px 8px 8px 8px black;
-    
-    
-   
-    
   }
-  &__heading{
+  &__heading {
     margin: 0 auto;
     text-align: center;
     letter-spacing: 2px;
-    & span{
+    & span {
       letter-spacing: 4px;
       font-style: italic;
     }
-
   }
-  &__icon{
+  &__icon {
     width: 90%;
     height: 200px;
   }
-  &__text{
+  &__text {
     text-align: center;
     font-weight: bolder;
   }
-  
 }
-.about{
-  background-color: #141414;
+.testimonials{
+  
+  
   height: 500px;
-  width: 100%;
+  background-color: #141414;
+  &__content{
+    display: flex;
+  justify-content: row;
+  justify-content: space-around;
+
+  }
+  &__heading{
+    margin: 0;
+    margin-bottom: 4rem;
+    font-weight: lighter;
+    font-size: 2rem;
+    text-align: center;
+  }
+  &__item{
+    position: relative;
+    width: 20rem;
+  }
+  &__decoration{
+    position: absolute;
+    
+    
+    &-black{
+      
+      top: 0;
+    left: 0;
+    width: 90%;
+    z-index: 1000;
+    }
+    &-purple{
+      width: 100%;
+    }
+    &-purple-center{
+      
+      width: 90%;
+      top: 0;
+    left: 1.25rem;
+  }
+  &-purple-left{
+  right: 2rem;
+
 }
-.form{
-  
+
+}
+}
+
+.form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -170,31 +207,29 @@ background: linear-gradient(270deg, rgba(20,20,20,0) 40%, rgba(20,20,20,0.731530
   margin: 0 auto;
   color: white;
   &__container{
-    background-color:rgb(31, 30, 30);
+    background-color: rgb(31, 30, 30);
   }
-  &__wrapper{
+  
+  &__wrapper {
     width: 70%;
     margin: 0 auto;
     padding-bottom: 3rem;
-   
   }
-  &__icon{
+  &__icon {
     height: 6rem;
     margin-top: 2rem;
   }
-  &__legend{
+  &__legend {
     margin-bottom: 3rem;
-font-size: 2rem;
-font-weight: lighter;
-align-self: center;
-
+    font-size: 2rem;
+    font-weight: lighter;
+    align-self: center;
   }
-  &__label{
+  &__label {
     font-weight: lighter;
     margin-bottom: 0.4rem;
-    
   }
-  &__input{
+  &__input {
     margin-bottom: 1rem;
     height: 2.5rem;
     background: none;
@@ -203,33 +238,30 @@ align-self: center;
     outline: #6c63ffff;
     border-radius: 4px;
     padding: 4px;
-    &:focus{
+    &:focus {
       border: 1px solid #6c63ffff;
       box-shadow: inset 0 0 3px #6c63ffff, 0 0 3px #6c63ffff;
     }
   }
-  & option{
+  & option {
     color: white;
-    background-color:rgb(31, 30, 30);
+    background-color: rgb(31, 30, 30);
   }
-  &__button{
-    
+  &__button {
     @include button;
     width: 16rem;
     height: 3rem;
     align-self: center;
-    
   }
-
-  
+}
+.gallery{
+  padding: 1rem;
 }
 .footer {
   width: 100%;
   height: 400px;
   padding-top: 1.5rem;
-  background-color: #141414;
   color: #e5e5e5;
-  
 
   &__container {
     display: flex;
@@ -251,7 +283,6 @@ align-self: center;
     font-family: "Satisfy";
     font-size: 1.5rem;
     font-weight: bold;
-    
   }
   &__socials {
     flex-basis: 300px;
