--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -190,6 +190,9 @@ html {
       border: 1px solid #6c63ffff;
       box-shadow: inset 0 0 3px #6c63ffff, 0 0 3px #6c63ffff;
     }
+    &-textarea{
+      min-height: 10rem;
+    }
   }
   & option {
     color: white;
