added photo for dog section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -407,7 +407,8 @@ html {
   
 }
 &__image{
-  max-width:400px;
+  max-width:600px;
+  flex-basis: 400px;
   flex-grow: 0;
 	flex-shrink: 0;
   margin-bottom:1rem;
