--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,13 +33,15 @@ $mainLighter:rgb(27, 27, 27);
 $mainDarker:#141414;
 $secondaryPurple:#6c63ffff;
 
-
+html:focus-within{
+  scroll-behavior: smooth;
+}
 html {
   font-size: 18px;
   box-sizing: border-box;
   font-family: "Roboto";
   background-color: $mainLighter;
-  scroll-behavior: smooth;
+
   @media(max-width:$screen-M){
     font-size: 16px;
 
@@ -50,6 +52,7 @@ html {
    }
  
 }
+
 
 *,
 *:before,
@@ -201,6 +204,11 @@ html {
     max-height: 900px;
     overflow: hidden;
     z-index: 99;
+  }
+  &__image{
+    @media(max-width: 480px){
+      aspect-ratio: 2/3;
+    }
   }
   
   &__mask {
@@ -382,7 +390,7 @@ html {
   display: flex;
   flex-direction: row;
   padding-right: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   @media(max-width:$screen-XL){
     flex-direction: column;
     align-items: center;
