--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -318,6 +318,7 @@ html {
 
 
 .form {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -325,6 +326,27 @@ html {
   max-width: 450px;
   margin: 0 auto;
   color: white;
+  &__feedback{
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%,100%);
+    width: 100%;
+  }
+  &__feedback-good{
+      color: rgb(90, 230, 90);
+      text-align: center;
+    }
+    &__feedback-bad{
+      color: rgb(248, 60, 60);
+      text-align: center;
+    }
+    &__feedback-onExit{
+      opacity: 0;
+      transition: all 1s linear;
+    }
+  
   &__container{
    background-color: $mainLighter;
   }
@@ -373,6 +395,8 @@ html {
     @include button;
     width: 16rem;
     height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
     align-self: center;
   }
 }
@@ -604,4 +628,7 @@ margin-bottom: 2rem;
       font-weight: 200;
     }
   }
+}
+.hidden{
+  display: none;
 }
