--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -86,13 +86,35 @@ html {
   }
 }
 .navigation {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   &__link {
     margin: 1.5rem;
     font-family: "Roboto";
     color: white;
     text-decoration: none;
   }
+  &__language{
+    display: inline-block;
+    margin-left: 2rem;
+    background-color: transparent;
+    border: none;
+    cursor:pointer;
+    @media(max-width:$screen-S){
+      display: block;
+      margin: 0 auto;
+      margin-top: 10rem;
+      
+      
+    }
+    
+  & img{
+    width: 50px;
+    border-radius: 4px;
+
+  }
+}
   &__button{
    
     background: transparent;
@@ -135,6 +157,7 @@ html {
     
   }
   &__modal{
+    
     position: absolute;
     position: fixed;
     top:135px;
