--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -42,3 +42,90 @@
   transition-timing-function: cubic-bezier(0.8, 1, 0.7, 1);
   transition-duration: 0.25s;
 }
+
+
+.feedback__spinner {
+  display: inline-block;
+  margin: 0 auto;
+  width: 2rem;
+  height: 2rem;
+  transform: translateX(-50%);
+}
+.feedback__spinner div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.feedback__spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #fff;
+  margin: -4px 0 0 -4px;
+}
+.feedback__spinner div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.feedback__spinner div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.feedback__spinner div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.feedback__spinner div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.feedback__spinner div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.feedback__spinner div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.feedback__spinner div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.feedback__spinner div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.feedback__spinner div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.feedback__spinner div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.feedback__spinner div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.feedback__spinner div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.feedback__spinner div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.feedback__spinner div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.feedback__spinner div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.feedback__spinner div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
