--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,400&family=Satisfy&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @mixin button {
   margin-top: 2rem;
 
@@ -14,7 +14,7 @@
     transition: all 0.1s linear;
   }
 }
-@mixin hamburger__inner{
+@mixin hamburger__inner {
   position: absolute;
   display: inline-block;
   width: 100%;
@@ -29,11 +29,11 @@ $screen-M: 768px;
 $screen-L: 850px;
 $screen-XL: 1000px;
 $screen-XXL: 1200px;
-$mainLighter:rgb(27, 27, 27);
-$mainDarker:#141414;
-$secondaryPurple:#6c63ffff;
+$mainLighter: rgb(27, 27, 27);
+$mainDarker: #141414;
+$secondaryPurple: #6c63ffff;
 
-html:focus-within{
+html:focus-within {
   scroll-behavior: smooth;
 }
 html {
@@ -42,17 +42,13 @@ html {
   font-family: "Roboto";
   background-color: $mainLighter;
 
-  @media(max-width:$screen-M){
+  @media (max-width: $screen-M) {
     font-size: 16px;
-
   }
-  @media(max-width:$screen-S){
+  @media (max-width: $screen-S) {
     font-size: 14px;
-    
-   }
- 
+  }
 }
-
 
 *,
 *:before,
@@ -62,7 +58,6 @@ html {
 .stop-scrolling {
   height: 100vh;
   overflow: hidden;
-  
 }
 
 .header {
@@ -74,10 +69,6 @@ html {
   align-items: center;
   margin: 0 auto;
   background-color: $mainDarker;
-  
-  
-  
-  
 
   &__title {
     margin: 0;
@@ -95,72 +86,60 @@ html {
     color: white;
     text-decoration: none;
   }
-  &__language{
+  &__language {
     display: inline-block;
     margin-left: 2rem;
     background-color: transparent;
     border: none;
-    cursor:pointer;
-    @media(max-width:$screen-S){
+    cursor: pointer;
+    @media (max-width: $screen-S) {
       display: block;
       margin: 0 auto;
       margin-top: 10rem;
-      
-      
     }
-    
-  & img{
-    width: 50px;
-    border-radius: 4px;
 
+    & img {
+      width: 50px;
+      border-radius: 4px;
+    }
   }
-}
-  &__button{
-   
+  &__button {
     background: transparent;
     padding: 10px;
     cursor: pointer;
     border: none;
-    
 
-    
-  
-    @media(min-width:$screen-S){
+    @media (min-width: $screen-S) {
       display: none;
-      
-      
     }
   }
-  &__hamburger{
+  &__hamburger {
     position: relative;
     display: inline-block;
     width: 30px;
     height: 24px;
-    
-    &-inner{
-    @include hamburger__inner;
-    transition: background-color .2s .1s ease-in-out;
-    ;
-    &::before{
+
+    &-inner {
       @include hamburger__inner;
-      content: '';
-      transform: translateY(-10px);
-      transition: transform .2s .1s ease-in-out;
+      transition: background-color 0.2s 0.1s ease-in-out;
+      &::before {
+        @include hamburger__inner;
+        content: "";
+        transform: translateY(-10px);
+        transition: transform 0.2s 0.1s ease-in-out;
+      }
+      &::after {
+        @include hamburger__inner;
+        content: "";
+        transform: translateY(10px);
+        transition: transform 0.2s 0.1s ease-in-out;
+      }
     }
-    &::after{
-      @include hamburger__inner;
-      content: '';
-      transform: translateY(10px);
-      transition: transform .2s .1s ease-in-out;
-    }
-    }
-    
   }
-  &__modal{
-    
+  &__modal {
     position: absolute;
     position: fixed;
-    top:135px;
+    top: 135px;
     height: 100%;
     left: 0;
     z-index: 10000;
@@ -168,18 +147,16 @@ html {
     color: white;
     width: 100%;
     transform: translateX(100%);
-    transition: transform .3s  ease-in-out;
-    &-active{
-      transition: transform .3s  ease-in-out;
+    transition: transform 0.3s ease-in-out;
+    &-active {
+      transition: transform 0.3s ease-in-out;
       transform: translateX(0px);
     }
-    @media(min-width:$screen-S){
+    @media (min-width: $screen-S) {
       display: none;
-      
-      
     }
   }
-  &__list{
+  &__list {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -188,30 +165,29 @@ html {
     padding-left: 0;
     list-style: none;
     font-size: 2rem;
-    & li{
+    & li {
       margin-bottom: 2rem;
     }
   }
-  @media(max-width:$screen-S){
+  @media (max-width: $screen-S) {
     display: none;
-    
   }
 }
-.navigation__hamburger-active .navigation__hamburger-inner{
+.navigation__hamburger-active .navigation__hamburger-inner {
   background-color: transparent;
 }
-.navigation__hamburger-active .navigation__hamburger-inner:after{
-  transform:  rotate(45deg);
+.navigation__hamburger-active .navigation__hamburger-inner:after {
+  transform: rotate(45deg);
 }
-.navigation__hamburger-active .navigation__hamburger-inner:before{
-  transform:  rotate(-45deg);
+.navigation__hamburger-active .navigation__hamburger-inner:before {
+  transform: rotate(-45deg);
 }
-.slick-list{
+.slick-list {
   height: 100% !important;
   width: 100%;
 }
 
-.gatsby-image-wrapper{
+.gatsby-image-wrapper {
   display: block !important;
 }
 .hello {
@@ -220,8 +196,7 @@ html {
   z-index: 99;
   height: 100%;
   max-height: 900px;
-  
-  
+
   &__slider {
     width: 100%;
     height: 100%;
@@ -229,12 +204,12 @@ html {
     overflow: hidden;
     z-index: 99;
   }
-  &__image{
-    @media(max-width: 480px){
+  &__image {
+    @media (max-width: 480px) {
       aspect-ratio: 2/3;
     }
   }
-  
+
   &__mask {
     position: absolute;
     width: 100%;
@@ -248,12 +223,12 @@ html {
       rgba(20, 20, 20, 0) 40%,
       rgba(20, 20, 20, 0.7315301120448179) 70%
     );
-    @media(max-width:$screen-XS){
+    @media (max-width: $screen-XS) {
       display: none;
     }
   }
   &__content {
-    @media(max-width:$screen-XS){
+    @media (max-width: $screen-XS) {
       display: none;
     }
     position: absolute;
@@ -261,17 +236,15 @@ html {
     left: 6rem;
     width: 30%;
     min-width: 300px;
-    @media(max-width:$screen-L){
+    @media (max-width: $screen-L) {
       top: 2rem;
       left: 3rem;
       width: 50%;
-      
     }
-    @media(max-width:$screen-S){
-      top: .5rem;
-      left: .5rem;
+    @media (max-width: $screen-S) {
+      top: 0.5rem;
+      left: 0.5rem;
       width: 70%;
-     
     }
 
     color: white;
@@ -279,9 +252,8 @@ html {
     &-heading {
       margin-bottom: 1rem;
       font-size: 4rem;
-      @media(max-width:$screen-S){
-       margin-top:.5rem;
-       
+      @media (max-width: $screen-S) {
+        margin-top: 0.5rem;
       }
     }
     &-text {
@@ -297,7 +269,7 @@ html {
       margin-right: 1rem;
     }
   }
-  &-modal{
+  &-modal {
     display: none;
   }
 }
@@ -339,7 +311,6 @@ html {
   }
 }
 
-
 .form {
   position: relative;
   display: flex;
@@ -349,31 +320,30 @@ html {
   max-width: 450px;
   margin: 0 auto;
   color: white;
-  &__feedback{
-
+  &__feedback {
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%,100%);
+    transform: translate(-50%, 100%);
     width: 100%;
   }
-  &__feedback-good{
-      color: rgb(90, 230, 90);
-      text-align: center;
-    }
-    &__feedback-bad{
-      color: rgb(248, 60, 60);
-      text-align: center;
-    }
-    &__feedback-onExit{
-      opacity: 0;
-      transition: all 1s linear;
-    }
-  
-  &__container{
-   background-color: $mainLighter;
+  &__feedback-good {
+    color: rgb(90, 230, 90);
+    text-align: center;
   }
-  
+  &__feedback-bad {
+    color: rgb(248, 60, 60);
+    text-align: center;
+  }
+  &__feedback-onExit {
+    opacity: 0;
+    transition: all 1s linear;
+  }
+
+  &__container {
+    background-color: $mainLighter;
+  }
+
   &__wrapper {
     width: 70%;
     margin: 0 auto;
@@ -406,13 +376,13 @@ html {
       border: 1px solid $secondaryPurple;
       box-shadow: inset 0 0 3px $secondaryPurple, 0 0 3px $secondaryPurple;
     }
-    &-textarea{
+    &-textarea {
       min-height: 10rem;
     }
   }
   & option {
     color: white;
-    background-color: $mainLighter
+    background-color: $mainLighter;
   }
   &__button {
     @include button;
@@ -423,174 +393,158 @@ html {
     align-self: center;
   }
 }
-.dogs{
+.dogs {
   display: block;
   color: white;
-  &__heading{
-    font-family: 'Satisfy';
+  &__heading {
+    font-family: "Satisfy";
     font-size: 2.5rem;
     letter-spacing: 4px;
     text-align: center;
-    
+
     margin-bottom: 2rem;
   }
-&__article{
-  display: flex;
-  flex-direction: row;
-  padding-right: 2rem;
-  margin-bottom: 2rem;
-  @media(max-width:$screen-XL){
-    flex-direction: column;
-    align-items: center;
-    padding:0;
-  }
-  
-  
-}
-&__text{
-  @media(max-width:$screen-XL){
-   text-align: center;
-  }
-
-}
-&__details{
-  display: flex;
-  align-items: center;
-  flex-basis: 30%;
-  font-size: 1.1rem;
-  line-height: 2rem;
-  
-  
-}
-&__image{
-  max-width:600px;
-  flex-basis: 400px;
-  flex-grow: 0;
-	flex-shrink: 0;
-  margin-bottom:1rem;
-
-  border-radius: 4px;
-  
-
-}
-
-&__info{
-  flex-basis: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5rem 0 5rem 0;
- 
-  &-decoration{
-    width: 4rem;
-    height: 4px;
-    background-color: white;
-  }
-  &-puppy{
-    justify-content: center;
-    padding: 0;
-  }
-}
-&__name{
-  font-family: 'Bebas Neue';
-  font-size: 5rem;
-  margin-top: 1.5rem;
-  letter-spacing: 4px;
-  text-transform: uppercase;
-  color: aqua;
-  &-female{
-    color: rgb(245, 161, 175);
-  }
-}
-&__breed{
-  margin-bottom: 1.5rem;
-  font-family: 'Bebas Neue';
-  font-size: 2rem;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  
-}
-&__button{
-@include button;
-width: 8rem;
-height: 3rem;
-margin-bottom: 2rem;
-
-  
-}
-&__price{
- font-size: 2rem;
- font-style: italic;
-  
-    
-  }
-
-}
-.gallery{
-  padding: 1rem;
-  
-  & img{
-    transition: all 0.3s ease-in-out;
-    &:hover{
-    transform: scale(1.02);
-    transition: all 0.3s ease-in-out;
-
-  }}
-}
-
-.testimonials{ 
-  padding: 1rem;
-  &__item{
+  &__article {
     display: flex;
     flex-direction: row;
-    justify-content:stretch;
+    padding-right: 2rem;
+    margin-bottom: 2rem;
+    @media (max-width: $screen-XL) {
+      flex-direction: column;
+      align-items: center;
+      padding: 0;
+    }
+  }
+  &__text {
+    @media (max-width: $screen-XL) {
+      text-align: center;
+    }
+  }
+  &__details {
+    display: flex;
+    align-items: center;
+    flex-basis: 30%;
+    font-size: 1.1rem;
+    line-height: 2rem;
+  }
+  &__image {
+    max-width: 600px;
+    flex-basis: 400px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-bottom: 1rem;
+
+    border-radius: 4px;
+  }
+
+  &__info {
+    flex-basis: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem 0 5rem 0;
+
+    &-decoration {
+      width: 4rem;
+      height: 4px;
+      background-color: white;
+    }
+    &-puppy {
+      justify-content: center;
+      padding: 0;
+    }
+  }
+  &__name {
+    font-family: "Bebas Neue";
+    font-size: 5rem;
+    margin-top: 1.5rem;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    color: aqua;
+    &-female {
+      color: rgb(245, 161, 175);
+    }
+  }
+  &__breed {
+    margin-bottom: 1.5rem;
+    font-family: "Bebas Neue";
+    font-size: 2rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  }
+  &__button {
+    @include button;
+    width: 8rem;
+    height: 3rem;
+    margin-bottom: 2rem;
+  }
+  &__price {
+    font-size: 2rem;
+    font-style: italic;
+  }
+}
+.gallery {
+  padding: 1rem;
+
+  & img {
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.02);
+      transition: all 0.3s ease-in-out;
+    }
+  }
+}
+
+.testimonials {
+  padding: 1rem;
+  &__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
     background-color: $mainDarker;
     margin-bottom: 2rem;
-    @media(max-width:$screen-M){
+    @media (max-width: $screen-M) {
       flex-direction: column;
       align-items: center;
     }
-    &-image{
-      @media(max-width:$screen-M){
+    &-image {
+      @media (max-width: $screen-M) {
         width: 100%;
         max-width: 400px;
       }
       width: 40%;
       height: auto;
-      
+
       border-radius: 4px;
       flex-shrink: 0;
     }
-    &-content{
-      @media(max-width:$screen-M){
+    &-content {
+      @media (max-width: $screen-M) {
         width: 100%;
       }
       display: flex;
-     flex-direction: column;
-     justify-content: stretch;
-     flex-shrink: 3;
-     width: 60%;
-     padding:1rem;
-     color: white;
-     
+      flex-direction: column;
+      justify-content: stretch;
+      flex-shrink: 3;
+      width: 60%;
+      padding: 1rem;
+      color: white;
     }
-    &-heading{
+    &-heading {
       text-align: center;
-      font-family: 'Satisfy';
-      
+      font-family: "Satisfy";
+
       font-size: 2rem;
       letter-spacing: 2px;
     }
-    &-text{
+    &-text {
       text-align: center;
-      
+
       font-size: 1.5rem;
       font-style: italic;
-      
     }
   }
- 
 }
 .footer {
   width: 100%;
@@ -608,7 +562,7 @@ margin-bottom: 2rem;
       border-bottom: 1px solid #ffffff1c;
       padding-bottom: 1.5rem;
       padding-right: 7rem;
-      @media(max-width:$screen-S){
+      @media (max-width: $screen-S) {
         padding-right: 1rem;
       }
     }
@@ -640,8 +594,8 @@ margin-bottom: 2rem;
   &__section {
     flex-basis: 200px;
     flex-grow: 0;
-	flex-shrink: 0;
-  
+    flex-shrink: 0;
+
     font-size: 0.85rem;
     line-height: 1.5rem;
     & h3 {
@@ -652,6 +606,6 @@ margin-bottom: 2rem;
     }
   }
 }
-.hidden{
+.hidden {
   display: none;
 }
